--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     
-   
+    <nav>
+        <a id="home" href="#">Home</a>
+        <a id="about" href="#">About</a>
+        <a id="products" href="#">Products</a>
+        <a id="contact" href="#">contact</a>
+        
+      </nav>
 
 
    
