--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <div id="app"></div>
    
 
+      <footer>
+        <span> &copy; 2024 All Rights Reserved </span>
+      </footer>
+
 
     <script type="module" src="lib/jquery-3.7.1.min.js"></script>
     <script type="module" src="app/model.js"></script>
