--- a/index.html
+++ b/index.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Midterm</title>
     <link rel="stylesheet" href="css/styles.css" />
-</head>
-<body>
-    
+  </head>
+  <body>
     <nav>
-        <a id="home" href="#">Home</a>
-        <a id="about" href="#">About</a>
-        <a id="products" href="#">Products</a>
-        <a id="contact" href="#">contact</a>
-        
-      </nav>
+      <a id="home" href="#">Home</a>
+      <a id="about" href="#">About</a>
+      <a id="products" href="#">Products</a>
+      <a id="contact" href="#">contact</a>
+    </nav>
 
-      <div id="app"></div>
-   
-
-      <footer>
-        <span> &copy; 2024 All Rights Reserved </span>
-      </footer>
-
+    <div id="app"></div>
 
     <script type="module" src="lib/jquery-3.7.1.min.js"></script>
     <script type="module" src="app/model.js"></script>
     <script type="module" src="app/app.js"></script>
-</body>
+  </body>
 </html>
-  
