Co-authored-by: alrwest <alrwest@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         <a id="home" href="#">Home</a>
         <a id="about" href="#">About</a>
         <a id="products" href="#">Products</a>
-        <a id="contact" href="#">contact</a>
-        
-      </nav>
+        <a id="contact" href="#">Contact</a>
+    </nav>
 
       <div id="app"></div>
    
