--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <a id="home" href="#">Home</a>
         <a id="about" href="#">About</a>
-        <a id="products" href="#">Products</a>
+        <a id="info" href="#">Info</a>
         <a id="contact" href="#">Contact</a>
     </nav>
 
