--- a/index.html
+++ b/index.html
@@ -7,23 +7,20 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    
     <nav>
-        <a id="home" href="#">Home</a>
-        <a id="about" href="#">About</a>
-        <a id="info" href="#">Info</a>
-        <a id="contact" href="#">Contact</a>
+      <div class="navbar">
+        <div class="nav-link"><a id="home" href="#">Home</a></div>
+        <div class="nav-link"><a id="about" href="#">About</a></div>
+        <div class="nav-link"><a id="info" href="#">Info</a></div>
+        <div class="nav-link"><a id="contact" href="#">Contact</a></div>
+      </div>
     </nav>
 
-      <div id="app"></div>
-   
+    <div id="app"></div>
 
-      <footer>
-        <span> &copy; 2024 All Rights Reserved </span>
-      </footer>
-
-     
-
+    <footer>
+      <span> &copy; 2024 All Rights Reserved </span>
+    </footer>
 
     <div id="app"></div>
 
